--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -4,24 +4,38 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 610px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 1.5rem;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 10px;
+  margin-bottom: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  font-size: 1.5rem;
+  text-align: center;
+  padding-block: 12px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding-inline: 30px;
+  padding-block: 10px;
+  font-size: 1.4rem;
 }
