--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+* {
+  font-family: 'Times New Roman', Times, serif;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 .logo {
@@ -14,6 +23,17 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 0px;
+  display: flex;
+  gap: 14px;
+}
+
+.left-links ul{
+  justify-content: flex-start;
+}
+
+.right-links ul{
+  justify-content: flex-end;
 }
 
 a {
