--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,7 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
 }
 
 .profile-image {
@@ -27,6 +28,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -45,4 +47,21 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.header-left-part ul{
+  padding: 0px;
+}
+
+.header-left-part,
+.header-right-part,
+.links{
+  display: flex;
+  gap: 14px;
+}
+
+.header-right-part{
+  margin-left: auto;
+  align-items: center;
+  margin-right: 10px;
 }
