--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -60,10 +60,44 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  font-weight: 600;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+
+.modal{
+  display: flex;
+  padding: 12px;
+}
+
+.icon{
+  flex-shrink: 0;
+  margin:12px;
+}
+.close-button{
+  flex-shrink: 0;
+}
+
+.header{
+  font-weight: bold;
+  font-size: large;
+}
+
+.title-n-x{
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text{
+  margin-bottom: 14px;
+  margin-right: 8px;
 }
