--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  font-size: 1.75rem;
+  text-align: left;
+  align-content: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-content: center;
+  text-align: center;
 }
 
 .sidebar {
-  width: 300px;
+  width: 200px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 5px;
+  flex: none;
+}
+
+a, li, ul{
+  list-style-type: none;
+  padding-left: 3%;
+  text-decoration: none;
+  color: white;
+}
+
+li{
+  margin-block: 10px;
+  font-size: 24px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  padding: 10px;
+}
+
+.container{
+  display: flex;
+  flex: 1;
+}
+
+.cards{
+  display: flex;
+  gap:32px;
+  box-sizing: border-box;
+  padding-top: 20px;
+  padding-left: 16px;
+  flex-wrap: wrap;
+  /*justify-content: space-around;*/
+  margin-bottom: 20px;
 }
